--- a/Project.toml
+++ b/Project.toml
@@ -32,7 +32,7 @@ DataFrames = "1.3.4"
 DataStructures = "0.18.13"
 Dates = "1"
 Distances = "0.10.7"
-Gurobi = "0.11.4"
+Gurobi = "0.11.4, 1"
 HiGHS = "1.1.4"
 JuMP = "1.1.1"
 LinearAlgebra = "1"
